--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,39 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <!--
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        -->
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌯</text></svg>">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
             content="Vote for your favorite SF Mission burrito!"
         />
-        <!--
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>🌯 🌯 🌯</title>
+        <title>🌯 🌯</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
     </body>
-    <script>window.twttr = (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0],
-        t = window.twttr || {};
-      if (d.getElementById(id)) return t;
-      js = d.createElement(s);
-      js.id = id;
-      js.src = "https://platform.twitter.com/widgets.js";
-      fjs.parentNode.insertBefore(js, fjs);
-
-      t._e = [];
-      t.ready = function(f) {
-        t._e.push(f);
-      };
-
-      return t;
-    }(document, "script", "twitter-wjs"));</script>
 </html>
