--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
             content="Vote for your favorite SF Mission burrito!"
         />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>🌯 🌯</title>
+        <title>Best Burrito?</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
