--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
             content="Vote for your favorite SF Mission burrito!"
         />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>Best Burrito?</title>
+        <title>Best Mission Burrito</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
